# ghost-detector

./: README.md  ecosystem.config.js  pyproject.toml
docs/: commands.md  config.md
ghost_detector/: __init__.py  config.py  config_example.json  ghost_detector.py
ghost_detector/detector/: __init__.py  cog.py
ghost_detector/my_extension/: cog.py
tests/: test_tmp.py
